Development Portal (2014-07-08 shi)
==============================
Fixed bug view_sectors header
Changed SAVi data quality text


Dashboard (2014-06-25 shi)
==============================
CSS for invalid country codes
CSS cleanup
Dash overview text
New table columns and headers


Dashboard (2014-06-19 shi)
==============================
CSS cleanup
Layouts for new columns
More tables for more tables
Added links to country codes
Styles for new cronlog page
Dash logo


Development Portal (2014-06-18 shi)
==============================
More columns for dashboard, css layouts
Changed text and translations reflecting updates every midnight GMT.


Development Portal (2014-06-17 shi)
==============================
Added column headers for data tables


Development Portal (2014-06-12 shi)
==============================
Dashboard changes
Cleaned up css duplicates


Development Portal (2014-05-30 shi)
==============================
About data sections restyled
About data sections translated


Development Portal (2014-05-28 shi)
==============================
CSS cleanup
Fixed hover tips
New about page text


Development Portal (2014-05-27 shi)
==============================
Dashboard design


Development Portal (2014-04-18 shi)
==============================
Removed alert pre-alpha


Development Portal (2014-04-16 shi)
==============================
Refactoring table styles
Added new date class for activity table


Development Portal (2014-04-12 shi)
==============================
Fixed map height for High Vis flava
Alphabetised countries


Development Portal (2014-04-11 shi)
==============================
Added new text to descriptions
Added new text to data quality page
Added links in footer to data quality page
Added new text to Donors and Sectors pages
Added translations for new text


Development Portal (2014-04-10 shi)
==============================
Fixed translations for tongue dropdown
Fixed tables from expanding beyond width