@@ -1,3 +1,8 @@
+Development Portal (2014-07-23 shi)
+==============================
+New CSS for template system
+
+
 Development Portal (2014-07-08 shi)
 ==============================
 Fixed bug view_sectors header
